# pypi

./: .coverage  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent-sync.sh  bootstrap.sh  flake.nix  pyproject.toml  resq
.claude/: settings.local.json
.git-hooks/: README.md  commit-msg  local-pre-push  post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: dependabot.yml  labeler.yml  labels.yml
.github/agents/: fastmcp-specialist.md
.github/commands/: lint.md  run.md  test.md
.github/rules/: mcp-protocol.md  type-safety.md
.github/skills/feynman-auditor/: SKILL.md
.github/skills/nemesis-auditor/: SKILL.md
.github/skills/state-inconsistency-auditor/: SKILL.md
.github/workflows/: auto-merge.yml  ci-dsa.yml  ci.yml  label-sync.yml  labeler.yml  pr-size-labeler.yml  publish-dsa.yml  publish.yml  security.yml  sync-to-mono.yml
.hypothesis/constants/: 03b1ee6bc6ff6afa  03e11ce2a87d6aa9  04bb78690ee7cc12  0f8d818c94bddab1  107eaa367bb844dc  14e78a288f2ffa7c  15bc0c1be92ac817  1a0040f8ef50a03a  2012d5bf4fac6f40  20a00003d7f908d4  235f29d61e59b835  2557fa85a7cb8d6f  335fbf23279b4236  3a899d9ed6cc1600  3f2e446a14fc7b6b  4165d4119382b7e5  4b711966c9828f1c  4db1b0795545d558  55299e5e6a1194f8  638576dc4aa80324  65021c996e705866  6dd55c9dc0065158  73aea2e2e3955a55  78de2715837f3575  7cb0e63fd01345fc  7d28a2215d02645f  7e47b12f355c1c4a  81ae9d39961bad46  8992a277ae6ec149  8e031348d638bf24  8fd134f087b6d9c1  8fd9ca667b573e74  93583a0ee019ba79  964a9e617aa94865  9c71a5a83c63f00b  ae4fced2fbc0674d  af983b08394a58e9  afe8ac82fde74767  b462d81a6c4d6e4c  bec77a8afdda42f2  (+11 more)
docs/superpowers/plans/: 2026-03-17-enterprise-publishing-and-tests.md
docs/superpowers/specs/: 2026-03-17-enterprise-publishing-and-tests-design.md  2026-03-17-folder-restructure-design.md
scripts/: setup.sh
src/resq_mcp/: __init__.py  __main__.py  config.py  dtsop.py  hce.py  models.py  pdie.py  prompts.py  resources.py  security.py  server.py  telemetry.py  timeout.py  tools.py
src/resq_mcp/core/: __init__.py  config.py  errors.py  models.py  security.py  telemetry.py
src/resq_mcp/drone/: __init__.py  models.py  service.py
src/resq_mcp/dtsop/: __init__.py  service.py  tools.py
src/resq_mcp/hce/: __init__.py  models.py  service.py  tools.py
src/resq_mcp/pdie/: __init__.py  models.py  service.py
tests/: conftest.py  test_config.py  test_dtsop.py  test_hce.py  test_models.py  test_pdie.py  test_security.py  test_server.py  test_timeout.py  test_tools.py  test_validate_incident.py
tests/integration/: test_flows.py
tests/property/: test_models.py  test_probabilistic.py
tests/unit/: test_dtsop.py  test_hce.py  test_models.py  test_pdie.py  test_resources.py  test_server.py  test_server_extended.py
tests/unit/core/: test_config.py  test_errors_extended.py  test_telemetry.py  test_telemetry_extended.py  test_timeout.py  test_timeout_extended.py
