# Copyright 2026 ResQ
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "resq-mcp"
version = "0.2.0"
description = "FastMCP server exposing ResQ platform capabilities to AI clients"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"
authors = [{ name = "ResQ Team" }]
keywords = ["mcp", "drone", "disaster-response", "fastmcp", "resq"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=0.1.0",
  "fastmcp>=0.1.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "uvicorn>=0.20.0",
  "fastapi>=0.115.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Repository = "https://github.com/resq-software/mcp"
Changelog = "https://github.com/resq-software/mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/resq-software/mcp/issues"

[project.scripts]
resq-mcp = "resq_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resq_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # Pyflakes
  "I",     # isort
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "UP",    # pyupgrade
  "ARG",   # flake8-unused-arguments
  "SIM",   # flake8-simplify
  "TC",    # flake8-type-checking
  "PTH",   # flake8-use-pathlib
  "RUF",   # Ruff-specific rules
  "ASYNC", # flake8-async
  "S",     # flake8-bandit (security)
]
ignore = [
  "S104", # Possible binding to all interfaces (acceptable for dev server)
]

[tool.ruff.lint.isort]
known-first-party = ["resq_mcp"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["src/resq_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "chore", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "build>=1.0.0",
  "twine>=5.0.0",
  "hypothesis>=6.100.0",
  "aioresponses>=0.7.6",
]
